--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
       <h1 class="font-sans text-2xl  font-bold lg:text-4xl">
         SIMPLE TODO LIST
       </h1>
+      <!-- <button>Fitur Mode Malam Coming Soon</button> -->
     </div>
 
-    <!-- Search Note -->
-    <div class="relative justify-center mt-4 shadow-lg">
+
+    <!-- Add Task -->
+    <div id="addTask" class="relative justify-center mt-4 shadow-lg">
       <svg class="absolute left-0 top-1/2 transform -translate-y-1/2 w-6 h-6 ml-2 text-gray-500 z-10" 
           aria-hidden="true" 
           xmlns="http://www.w3.org/2000/svg" 
@@ -27,37 +29,58 @@
           <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="m21 21-3.5-3.5M17 10a7 7 0 1 1-14 0 7 7 0 0 1 14 0Z"/>
       </svg>
 
-      <input type="text" 
+      <input type="text" id="taskInput"
             class="rounded-base py-1 w-full pl-10 focus:border-blue-500 border-blue-500 active:border-blue-500 border-2 block rounded-t-base text-2xl focus:ring-blue-500 focus:outline-none" 
-            placeholder="Search Note..." />
+            placeholder="Add Task..." />
     </div>
 
     <!-- Task -->
-    <ul class="w-full rounded-sm ">
-      <div class=" my-1.5 py-3 flex items-center px-3">
-        <input type="checkbox" class="w-5 h-5 mr-2 ">
-        <label class="px-3">Test</label><br>
-      </div>
-      <hr>
-      <div class=" my-1.5 py-3 flex items-center px-3">
-        <input type="checkbox" class="w-5 h-5 mr-2 ">
-        <label class="px-3">Test</label><br>
-      </div>
-      <hr>
-      <div class=" my-1.5 py-3 flex items-center px-3">
-        <input type="checkbox" class="w-5 h-5 mr-2 ">
-        <label class="px-3">Test</label><br>
-      </div>
-      <hr>
-      <div class=" my-1.5 py-3 flex items-center px-3 ">
-        <input type="checkbox" class="w-5 h-5 mr-2 ">
-        <label class="px-3 ">Test</label><br>
-      </div>
-      <hr>
+    <ul id="todo-list" class="w-full rounded-sm divide-y divide-gray-400">
+
+      <li class="py-3 flex justify-between items-center px-4">
+        <div class="flex items-center "> 
+          <input type="checkbox" id="task1" class="w-5 h-5 mr-2">
+          <label for="task1" class="text-lg px-4 cursor-pointer peer-checked:line-through peer-checked:text-gray-400">
+            Belajar 2 Jam
+          </label>
+        </div>
+        <button aria-label="Hapus Tugas" class="text-red-600 hover:text-red-800 transition">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 fill-current" viewBox="0 0 24 24">
+            <path d="M22 5a1 1 0 0 1-1 1H3a1 1 0 0 1 0-2h5V3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v1h5a1 1 0 0 1 1 1zM4.934 21.071 4 8h16l-.934 13.071a1 1 0 0 1-1 .929H5.931a1 1 0 0 1-.997-.929zM15 18a1 1 0 0 0 2 0v-6a1 1 0 0 0-2 0zm-4 0a1 1 0 0 0 2 0v-6a1 1 0 0 0-2 0zm-4 0a1 1 0 0 0 2 0v-6a1 1 0 0 0-2 0z"/>
+          </svg>
+        </button>
+      </li>
+      <li class="py-3 flex justify-between items-center px-4">
+        <div class="flex items-center "> 
+          <input type="checkbox" id="task2" class="w-5 h-5 mr-2">
+          <label for="task2" class="text-lg px-4 cursor-pointer peer-checked:line-through peer-checked:text-gray-400">
+            Minum air 2L
+          </label>
+        </div>
+        <button aria-label="Hapus Tugas" class="text-red-600 hover:text-red-800 transition">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 fill-current" viewBox="0 0 24 24">
+            <path d="M22 5a1 1 0 0 1-1 1H3a1 1 0 0 1 0-2h5V3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v1h5a1 1 0 0 1 1 1zM4.934 21.071 4 8h16l-.934 13.071a1 1 0 0 1-1 .929H5.931a1 1 0 0 1-.997-.929zM15 18a1 1 0 0 0 2 0v-6a1 1 0 0 0-2 0zm-4 0a1 1 0 0 0 2 0v-6a1 1 0 0 0-2 0zm-4 0a1 1 0 0 0 2 0v-6a1 1 0 0 0-2 0z"/>
+          </svg>
+        </button>
+      </li>
+      <li class="py-3 flex justify-between items-center px-4">
+        <div class="flex items-center "> 
+          <input type="checkbox" id="task3" class="w-5 h-5 mr-2">
+          <label for="task3" class="text-lg px-4 cursor-pointer peer-checked:line-through peer-checked:text-gray-400">
+            Makan
+          </label>
+        </div>
+        <button aria-label="Hapus Tugas" class="text-red-600 hover:text-red-800 transition">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 fill-current" viewBox="0 0 24 24">
+            <path d="M22 5a1 1 0 0 1-1 1H3a1 1 0 0 1 0-2h5V3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v1h5a1 1 0 0 1 1 1zM4.934 21.071 4 8h16l-.934 13.071a1 1 0 0 1-1 .929H5.931a1 1 0 0 1-.997-.929zM15 18a1 1 0 0 0 2 0v-6a1 1 0 0 0-2 0zm-4 0a1 1 0 0 0 2 0v-6a1 1 0 0 0-2 0zm-4 0a1 1 0 0 0 2 0v-6a1 1 0 0 0-2 0z"/>
+          </svg>
+        </button>
+      </li>
+
     </ul>
 
     <!-- Button add task -->
-    <div class="flex fixed bottom-6 right-6 mt-5 ">
+    <!-- <div class="flex fixed bottom-6 right-6 mt-5 ">
       <button class="bg-blue-500 px-3 py-3 rounded-full hover:shadow-xl text-white transition duration-150 flex 
         items-center justify-center hover:bg-blue-400">
       
@@ -72,6 +95,8 @@
         </svg>
 
       </button>
-    </div>
+    </div> -->
+
 </body>
+  <script src="script.js"></script>
 </html>
